# environment_rl

./: .gitignore  CLAUDE.md  Project env rl.md  README.md  pyproject.toml
conf/: config.yaml
conf/judge/: default.yaml
conf/monitor/: default.yaml
conf/training/: reference_agent.yaml
data/cifar10/: splits.json
docs/: agentic-framework.md  playbook.md  setup-llm.md
examples/: reset_prompt_tuning.py  review_decisions.py  run_llm_agent.py  run_reference_agent.py  show_full_run.py  show_iterative_feedback.py  show_llm_transcript.py
src/env_rl/agent/: model.py  reference_run.py
src/env_rl/data/: loaders.py  splits.py
src/env_rl/harness/: __init__.py  agent_trace.py  decision_cache.py  edits.py  ensemble.py  human_review.py  iterative.py  policy.py  prompt.py
src/env_rl/judge/: __init__.py  chain.py  coverage.py  defensibility.py  deliverables.py  evaluation.py  live_diag.py  replay.py  scoring.py
src/env_rl/monitor/: __init__.py  ema.py  hooks.py  logging.py  rules.py  session.py
tests/: _helpers.py  conftest.py
tests/integration/: test_cheat_attempts.py  test_full_reference_run.py  test_llm_harness_end_to_end.py  test_unwaived_r3_r4.py
tests/unit/agent/: test_model.py
tests/unit/data/: test_loaders.py  test_splits.py
tests/unit/harness/: _stubs.py  test_adversary.py  test_agent_trace.py  test_distiller.py  test_edits.py  test_human_review.py  test_iterative.py  test_meta_loop.py  test_policy.py  test_prompt.py  test_prompt_lifecycle.py  test_prompt_tuning.py  test_restart_flow.py  test_stage_6_features.py  test_stage_7_integration.py  (+1 more)
(+31 files in other folders)
