[tool.poetry]
name = "env-rl"
version = "0.1.0"
description = "Hermetic RL evaluation environment that trains an LLM to train a PyTorch CNN on CIFAR-10 under a 7-rule diagnostic playbook, with judge-monitored integrity and two-axis scoring."
authors = ["Zubair Ashfaque"]
readme = "README.md"
packages = [{include = "env_rl", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.2.0"
torchvision = "^0.17.0"
numpy = "^1.26.0"
hydra-core = "^1.3.0"
pydantic = "^2.6.0"
openai = ">=1.50.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
black = "^24.1.0"
ruff = "^0.3.0"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "integration: end-to-end tests that train/evaluate a model (slow)",
    "gpu: tests that require CUDA",
]
